# catfind

./: .cirrus.yml  .flake8  .gitignore  Dockerfile  Makefile  Procfile  README.rst  app.json  docker-compose.yml  pyproject.toml  requirements.txt
catfind/: __init__.py  config.py  default_config.py  discovery.py  guess.py  homepage.html  http.py  inventory.py  multientry.html
catfind/pypi_simple/: README.md  __init__.py  classes.py  client.py  parse_stream.py
tests/: test_catfind.py
