[tool.poetry]
name = "catfind"
version = "0.1.0"
description = "Sphinx indexing & search service"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
pony = "^0.7.14"
psycopg2-binary = "^2.9.2"
gunicorn = "^20.1.0"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
